--- a/frontendSIGUI/angular.json
+++ b/frontendSIGUI/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css",
               "node_modules/ol/ol.css"
             ],
