--- a/frontendSIGUI/package.json
+++ b/frontendSIGUI/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@types/geojson": "^7946.0.8",
     "json-server": "^0.17.0",
     "ol": "^6.14.1",
     "rxjs": "~7.5.0",
