--- a/AppServer_SIGUI/requirements.txt
+++ b/AppServer_SIGUI/requirements.txt
@@ -3,9 +3,12 @@ backports.zoneinfo==0.2.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 Django==4.0.4
+django-cors-headers==3.12.0
 djangorestframework==3.13.1
+djangorestframework-gis==1.0
 gsconfig-py3==1.0.8
 idna==3.3
+Pillow==9.1.1
 psycopg2-binary==2.9.3
 pytz==2022.1
 PyYAML==6.0
